# tailforward

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  default.nix  deny.toml  flake.nix  projects.toml
.github/workflows/: audit.yml  general.yml
examples/: config.json  config.toml  config.yaml
proptest-regressions/services/: post_webhook.txt
src/: axumlib.rs  config.rs  errors.rs  handle.rs  lib.rs  main.rs  tailscale.rs  telegram.rs
src/handlers/: ping.rs  post_webhook.rs
src/models/: error.rs  event.rs  message.rs  report.rs  tailscale_header.rs
src/services/: post_webhook.rs  telegram.rs
tailforward-cfg/: Cargo.toml
tailforward-cfg/src/: config.rs
tests/: ping.rs
