[package]
name = "ts_to_tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
bytes = "1"
chrono = "0.4"
color-eyre = "0.6"
derive_more = "0.99"
hmac = "0.12"
secrecy = "0.8"
serde = { version = "1.0.1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"

[profile.dev.package.backtrace]
opt-level = 3 # Otherwise color-eyre has poor performance
