[workspace]
members = ["tailforward-cfg"]

[package]
name = "tailforward"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = ["headers"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
color-eyre = "0.6"
tailforward-cfg = { path = "tailforward-cfg" }
hmac = "0.12"
secrecy = "0.8"
serde = { version = "=1.0.171", features = ["derive"] }
serde_derive = "=1.0.171"
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-tree = "0.2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
tap = "1"
camino = { version = "1", features = ["serde1"] }
config = "0.13"
tracing-opentelemetry = "0.19"
opentelemetry-otlp = "0.12"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.19", features = ["rt-tokio"] }
once_cell = "1"

[dev-dependencies]
pretty_assertions = "1"
test-case = "3"

[profile.dev.package.backtrace]
opt-level = 3 # Otherwise color-eyre has poor performance

[build-dependencies]
tailforward-cfg = { path = "tailforward-cfg" }
serde = "1.0"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.7"
camino = { version = "1" }
