[package]
name = "tailforward-cfg"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.1", features = ["derive"] }
camino = { version = "1", features = ["serde1"] }
